# cpen442-miner

./: .gitignore  Cargo.toml  README.md  all_proxies.txt  build.env  cpen442-miner.service  filter_proxies.sh  minerid.sh.gpg  minerid.txt  proxy.txt  runminer.sh  verify_coin.sh
.cargo/: config
src/: cpen442coin.rs  cpuminer.rs  cryptowallet.rs  error.rs  main.rs  miner.rs  ocldevice.rs  oclminer.rs  proxy.rs  util.rs
src/cl/: MD5.cl  MD5_2.cl
