[package]
name = "miner"
version = "0.1.0"
authors = ["Jack Guo <jackguo380@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
openssl = "0.10.25"
reqwest = { version = "0.9.22" }
clap = "2.33.0"
hex = "0.4.0"
base64 = "0.11.0"
rand = "0.7.2"
num_cpus = "1.10.1"
