[package]
name = "miner"
version = "0.1.0"
authors = ["Jack Guo <jackguo380@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3


[dependencies]
ocl = "0.19"
serde = { version = "1.0", features = ["derive"] }
openssl = "0.10.25"
reqwest = { version = "0.9.22" }
structopt = "0.3"
hex = "0.4.0"
base64 = "0.11.0"
rand_core = "0.5.1"
rand = "0.7"
num_cpus = "1.10.1"
arrayvec = "0.5.1"
serde_json = "1.0"
chrono = "0.4"
console = "0.9"
